fixed padding and vertical scrollbar issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@
 
 html {
     width: 100vw;
+	overflow-x: hidden;
 	margin:0;
 	padding:0;
 	text-align: center;
@@ -64,7 +65,7 @@ li {
 }
 
 #rightside {
-	width: 57%;
+	width: 55%;
 	margin-left: 38%;
 	padding-left: 3%;
 	padding-right: 2%;
